--- a/css/main.css
+++ b/css/main.css
@@ -134,3 +134,11 @@
     margin: 40px;
     font-size: 60px;
 }
+
+@media screen and (max-width: 768px) {
+    .text-service,.text-puntos{
+        font-size: 30px;
+        margin: 15px;
+    }
+    
+}
